Cycles: instanced hair with hidden emitter is invisible when rendering #55350

Closed
opened 2018-06-06 15:22:16 +02:00 by Dalai Felinto · 3 comments

Blender Version
Broken: 3b8ae85e3d (blender2.8 HEAD)
Worked: 2.79a

Short description of error
Emitter / duplicator visibility is affecting Cycles rendered hair.

Exact steps for others to reproduce the error
Original file is the following. A basic plane with hair and non visible emitter:

hair_emitter_hidden_279.blend

Now if you link the group and instance it in a new file:

instanced_hair.blend

In 2.79a it renders correctly, the emitter is invisible but the hair is visible. In 2.80 it's all invisible.

**Blender Version** Broken: 3b8ae85e3d3a (blender2.8 HEAD) Worked: 2.79a **Short description of error** Emitter / duplicator visibility is affecting Cycles rendered hair. **Exact steps for others to reproduce the error** Original file is the following. A basic plane with hair and non visible emitter: [hair_emitter_hidden_279.blend](https://archive.blender.org/developer/F3601937/hair_emitter_hidden_279.blend) Now if you link the group and instance it in a new file: [instanced_hair.blend](https://archive.blender.org/developer/F3601948/instanced_hair.blend) In 2.79a it renders correctly, the emitter is invisible but the hair is visible. In 2.80 it's all invisible.
Author
Owner

Added subscriber: @dfelinto

Added subscriber: @dfelinto

This issue was referenced by 9a0506ea18

This issue was referenced by 9a0506ea185c0ca6505e85ea0f5f5dc5fc48aa62
Dalai Felinto self-assigned this 2018-06-06 15:22:44 +02:00
Author
Owner

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#55350
No description provided.