Fix T55350: Cycles: instanced hair with hidden emitter is invisible when rendering